--- a/src/components/Player.scss
+++ b/src/components/Player.scss
@@ -2,9 +2,9 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  
+
  .player__container{
-    background: #000;
+    //background: #000;
     height: 80%;
  }
 }
