--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,13 +7,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-
 .App {
-  text-align: center;
-  height: 100vh;
+  min-height: 100vh;
 }
