--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,3 +10,44 @@ body {
 .App {
   min-height: 100vh;
 }
+
+button {
+  // font-family: 'Courier New', Courier, monospace;
+  box-sizing: border-box;
+  transition: 300ms all ease;
+  padding: .5rem 1rem;
+  font-size: 16px;
+  appearance: none;
+  outline: none;
+  border: 2px solid #a37a51;
+  color: #a37a51;
+  font-weight: bold;
+  cursor: pointer;
+  background: transparent;
+  margin: 1rem 0;
+
+  &:hover {
+    background: #a37a51;
+    color: #fff;
+  }
+  &:active {
+    background: darken(#a37a51,10%);
+  }
+}
+input[type=text] {
+  appearance: none;
+  border: none;
+  border-radius: 5px;
+  box-sizing: border-box;
+  padding: 10px;
+  font-size: 16px;
+  &:focus {
+    opacity: 0.8;
+    outline: none;
+  }
+}
+
+.controls {
+  display: flex;
+  justify-content: space-between;
+}
